arch: add pseudo number for renameat syscall
On newer architectures renameat syscall has been superseded by renameat2
syscall.

Add pseudo syscall number for renameat.

Signed-off-by: Icenowy Zheng <icenowy@aosc.io>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -1681,6 +1681,11 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #define __NR_s390_sthyi		__PNR_s390_sthyi
 #endif /* __NR_s390_sthyi */
 
+#define __PNR_renameat		-10207
+#ifndef __NR_renameat
+#define __NR_renameat		__PNR_renameat
+#endif /* __NR_renameat */
+
 #ifdef __cplusplus
 }
 #endif
