api: Add support for SCMP_ACT_KILL_PROCESS
This patch adds support for killing the entire process via the
SCMP_ACT_KILL_PROCESS action.  To maintain backward compatibility,
SCMP_ACT_KILL defaults to SCMP_ACT_KILL_THREAD.

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -244,7 +244,15 @@ struct scmp_arg_cmp {
 /**
  * Kill the process
  */
-#define SCMP_ACT_KILL		0x00000000U
+#define SCMP_ACT_KILL_PROCESS	0x80000000U
+/**
+ * Kill the thread
+ */
+#define SCMP_ACT_KILL_THREAD	0x00000000U
+/**
+ * Kill the thread.  Defined for backward compatibility
+ */
+#define SCMP_ACT_KILL		SCMP_ACT_KILL_THREAD
 /**
  * Throw a SIGSYS signal
  */
