api: addressed code review comments
* Added an API level 4 to better support KILL_PROCESS in
  sys_chk_seccomp_action()
* Added a live test for KILL_PROCESS
* Other small cleanups

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -26,7 +26,7 @@ else
 DBG_STATIC = -static
 endif
 
-AM_LDFLAGS = ${DBG_STATIC}
+AM_LDFLAGS = ${DBG_STATIC} -lpthread
 
 LDADD = util.la ../src/libseccomp.la ${CODE_COVERAGE_LIBS}
 
@@ -82,7 +82,8 @@ check_PROGRAMS = \
 	40-sim-log \
 	41-sim-syscall_priority_arch \
 	42-sim-adv_chains \
-	43-sim-kill_process
+	43-sim-kill_process \
+	44-live-kill_process
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -126,7 +127,8 @@ EXTRA_DIST_TESTPYTHON = \
 	40-sim-log.py \
 	41-sim-syscall_priority_arch.py \
 	42-sim-adv_chains.py \
-	43-sim-kill_process.py
+	43-sim-kill_process.py \
+	44-live-kill_process.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -171,7 +173,8 @@ EXTRA_DIST_TESTCFGS = \
 	40-sim-log.tests \
 	41-sim-syscall_priority_arch.tests \
 	42-sim-adv_chains.tests \
-	43-sim-kill_process.tests
+	43-sim-kill_process.tests \
+	44-live-kill_process.tests
 
 EXTRA_DIST_TESTSCRIPTS = \
 	38-basic-pfc_coverage.sh 38-basic-pfc_coverage.pfc
