api: seccomp_api_get() doesn't need to be marked as const
Reported-by: Marek <deadbeef@popcount.org>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -299,7 +299,7 @@ const struct scmp_version *seccomp_version(void);
  *      support for the SCMP_ACT_LOG action
  *
  */
-const unsigned int seccomp_api_get(void);
+unsigned int seccomp_api_get(void);
 
 /**
  * Set the library's level of API support
