docs: add the RELEASE_PROCESS.md file to the list of distributed files
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,9 @@ SUBDIRS = include src tools tests doc
 pkgconfdir = ${libdir}/pkgconfig
 pkgconf_DATA = libseccomp.pc
 
-EXTRA_DIST = CHANGELOG CREDITS LICENSE README.md CONTRIBUTING.md
+EXTRA_DIST = \
+	CHANGELOG CREDITS LICENSE \
+	README.md CONTRIBUTING.md RELEASE_PROCESS.md
 
 # support silent builds
 AM_MAKEFLAGS_0 = --quiet --no-print-directory
