--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -86,7 +86,8 @@ check_PROGRAMS = \
 	44-live-a2_order \
 	45-sim-chain_code_coverage \
 	46-sim-kill_process \
-	47-live-kill_process
+	47-live-kill_process \
+	48-sim-32b_args
 
 EXTRA_DIST_TESTPYTHON = \
 	util.py \
@@ -135,7 +136,8 @@ EXTRA_DIST_TESTPYTHON = \
 	44-live-a2_order.py \
 	45-sim-chain_code_coverage.py \
 	46-sim-kill_process.py \
-	47-live-kill_process.py
+	47-live-kill_process.py \
+	48-sim-32b_args.py
 
 EXTRA_DIST_TESTCFGS = \
 	01-sim-allow.tests \
@@ -184,7 +186,8 @@ EXTRA_DIST_TESTCFGS = \
 	44-live-a2_order.tests \
 	45-sim-chain_code_coverage.tests \
 	46-sim-kill_process.tests \
-	47-live-kill_process.tests
+	47-live-kill_process.tests \
+	48-sim-32b_args.tests
 
 EXTRA_DIST_TESTSCRIPTS = \
 	38-basic-pfc_coverage.sh 38-basic-pfc_coverage.pfc
