--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -65,6 +65,7 @@ enum scmp_filter_attr {
 	SCMP_FLTATR_CTL_TSYNC = 4,	/**< sync threads on filter load */
 	SCMP_FLTATR_API_TSKIP = 5,	/**< allow rules with a -1 syscall */
 	SCMP_FLTATR_CTL_LOG = 6,	/**< log not-allowed actions */
+	SCMP_FLTATR_SPEC_ALLOW = 7, /**< disable SSB mitigation */
 	_SCMP_FLTATR_MAX,
 };
 
@@ -367,6 +368,7 @@ const struct scmp_version *seccomp_version(void);
  *  3 : support for the SCMP_FLTATR_CTL_LOG filter attribute
  *      support for the SCMP_ACT_LOG action
  *      support for the SCMP_ACT_KILL_PROCESS action
+ *  4 : support for the SCMP_FLTATR_SPEC_ALLOW filter attrbute
  *
  */
 unsigned int seccomp_api_get(void);
