Add support for RISC-V 64-bit (riscv64)
The patch adds support for riscv64 architecture.

It was tested on Fedora/RISCV using 5.2-rc7 kernel.

Tested on top of libseccomp commit:
2b406e3b274407ceef53fa3de9469cfbd0fd0ddb

SECCOMP patch is included in Fedora/RISCV starting 20190703.n.0:
https://dl.fedoraproject.org/pub/alt/risc-v/disk-images/fedora/rawhide/20190703.n.0/Developer/

Kernel SECCOMP selftest is failing one test:

    [..]
    # [ RUN      ] global.user_notification_signal
    # [     FAIL ] global.user_notification_signal
    [..]
    # [==========] 73 / 74 tests passed.
    # [  FAILED  ]

libseccomp test results:

./regression -T live

    Regression Test Summary
     tests run: 9
     tests skipped: 0
     tests passed: 9
     tests failed: 0
     tests errored: 0

./regression

    Regression Test Summary
     tests run: 5200
     tests skipped: 142
     tests passed: 5200
     tests failed: 0
     tests errored: 0

Signed-off-by: David Abdurachmanov <david.abdurachmanov@sifive.com>

--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -196,6 +196,19 @@ struct scmp_arg_cmp {
 #define SCMP_ARCH_PARISC64	AUDIT_ARCH_PARISC64
 
 /**
+ * The RISC-V architecture tokens
+ */
+#ifndef EM_RISCV
+#define EM_RISCV		243
+#endif /* EM_RISCV */
+
+#ifndef AUDIT_ARCH_RISCV64
+#define AUDIT_ARCH_RISCV64	(EM_RISCV|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE)
+#endif /* AUDIT_ARCH_RISCV64 */
+
+#define SCMP_ARCH_RISCV64	AUDIT_ARCH_RISCV64
+
+/**
  * Convert a syscall name into the associated syscall number
  * @param x the syscall name
  */
@@ -1860,6 +1873,16 @@ int seccomp_export_bpf(const scmp_filter_ctx ctx, int fd);
 #ifndef __NR_rseq
 #define __NR_rseq		__PNR_rseq
 #endif /* __NR_rseq */
+
+#define __PNR_riscv_flush_icache	-10211
+#ifndef __NR_riscv_flush_icache
+#define __NR_riscv_flush_icache		__PNR_riscv_flush_icache
+#endif /* __NR_riscv_flush_icache */
+
+#define __PNR_renameat		-10212
+#ifndef __NR_renameat
+#define __NR_renameat		__PNR_renameat
+#endif /* __NR_renameat */
 
 #ifdef __cplusplus
 }
