--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 # Travis CI configuration for libseccomp
 
-# https://docs.travis-ci.com/user/trusty-ci-environment
+# https://docs.travis-ci.com/user/reference/bionic
 # https://wiki.ubuntu.com/Releases
 
-dist: xenial
+dist: bionic
 sudo: false
 
 notifications:
