tests: add tests for the binary tree
This commit adds tests to ensure the validity of the
binary tree and the resultant pfc and bpf output.

Signed-off-by: Tom Hromatka <tom.hromatka@oracle.com>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -58,3 +58,6 @@ util.pyc
 50-sim-hash_collision
 51-live-user_notification
 52-basic-load
+53-sim-binary_tree
+54-live-binary_tree
+55-basic-pfc_binary_tree
