--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -167,6 +167,9 @@ struct scmp_arg_cmp {
 #define AUDIT_ARCH_MIPSEL64N32	(EM_MIPS|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE|\
 				 __AUDIT_ARCH_CONVENTION_MIPS64_N32)
 #endif
+#ifndef AUDIT_ARCH_MIPSEL64
+#define AUDIT_ARCH_MIPSEL64	(EM_MIPS|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE)
+#endif
 #define SCMP_ARCH_MIPS		AUDIT_ARCH_MIPS
 #define SCMP_ARCH_MIPS64	AUDIT_ARCH_MIPS64
 #define SCMP_ARCH_MIPS64N32	AUDIT_ARCH_MIPS64N32
