build: fix building outside source directory
Move -I${top_builddir}/include to toplevel so that it is available in all
subdirs.  This is needed to find <seccomp.h> in the build directory, since
it is now a generated file.

Signed-off-by: Andreas Schwab <schwab@suse.de>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/configure.ac
+++ b/configure.ac
@@ -66,7 +66,7 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 dnl ####
 dnl build flags
 dnl ####
-AM_CPPFLAGS="-I\${top_srcdir}/include"
+AM_CPPFLAGS="-I\${top_srcdir}/include -I\${top_builddir}/include"
 AM_CFLAGS="-Wall"
 AM_LDFLAGS="-Wl,-z -Wl,relro"
 AC_SUBST([AM_CPPFLAGS])
