arch: add an automatically generated syscall table in CSV format
Later patches will make use of this new syscall table format instead
of the manually maintained tables.

The new CSV syscall table was generated with the following command:

  # ./arch-syscall-validate -c <kernel_source_dir> > syscalls.csv

Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,7 +46,7 @@ SOURCES_ALL = \
 	arch-s390.h arch-s390.c arch-s390-syscalls.c \
 	arch-s390x.h arch-s390x.c arch-s390x-syscalls.c
 
-EXTRA_DIST = arch-syscall-validate
+EXTRA_DIST = arch-syscall-validate syscalls.csv
 
 TESTS = arch-syscall-check
 
