travis: the arm64 build doesn't like cpp-coveralls
For some reason the Travis CI build is failing to pip install the
cpp-coveralls package so let's skip it (we don't run the coveralls
portions on arm64 anyway).

Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,10 @@ before_install:
   # assume the distro has an old version of cython
   - pip install cython
   # see https://github.com/eddyxu/cpp-coveralls
-  - pip install cpp-coveralls
+  - |
+    if [ $TRAVIS_CPU_ARCH == "amd64" ]; then
+      pip install cpp-coveralls
+    fi
 
 # perform the build and fail immediately on error
 install:
