--- a/include/seccomp.h.in
+++ b/include/seccomp.h.in
@@ -413,6 +413,9 @@ const struct scmp_version *seccomp_version(void);
  *      support for the SCMP_ACT_KILL_PROCESS action
  *  4 : support for the SCMP_FLTATR_CTL_SSB filter attrbute
  *  5 : support for the SCMP_ACT_NOTIFY action
+ *      support for using seccomp_notify_receive()
+ *      support for using seccomp_notify_respond()
+ *      support for using seccomp_notify_id_valid()
  *
  */
 unsigned int seccomp_api_get(void);
